# wallascrapping_v2

./: .env.example  .gitignore  Dockerfile  README.md  actor.json  config.json  elements_to_scrap.json  input_schema.json  instrucciones.txt  objetivos del proyecto.md  por hacer.txt  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: scrape.yml
config/: general_scrap_config.json
data/: web-20260116_103521.html  web-20260116_103728.html
data/step1/: raw_20260115_1241.csv  raw_20260115_1245.csv  raw_20260115_1247.csv  raw_20260115_1343.csv  raw_20260115_1354.csv  raw_20260116_1036.csv  raw_20260116_1038.csv
data/step2_exc/: excluded_20260115_1247.csv  excluded_20260115_1343.csv  excluded_20260115_1354.csv  excluded_20260116_1036.csv  excluded_20260116_1038.csv
data/step2_inc/: filtered_20260115_1247.csv  filtered_20260115_1343.csv  filtered_20260115_1354.csv  filtered_20260116_1036.csv  filtered_20260116_1038.csv
deleted/: step1_scrapper_from_old.py
src/: config.py  main.py  notifier.py  step1_scraper.py  step2_filter_initial.py  step3_bq_sync.py  step3_filter_logic.py  step4_enrich_gemini_basic.py  step5_finalize.py  tracker.py  utils.py
src/legacy_utils/: get_if_same_csv_exists.py  utils.py
src_old/: 01_wallascrap.py  01_wallascrap_jupiter_obsoleto.ipynb  02_join_tables_gopro.ipynb  02_join_tables_iphone.ipynb  03_feature_engineering_gopro.ipynb  03_feature_engineering_iphone.ipynb  04_download_description.ipynb  05_get_data_from_comments.ipynb  06_tendency.ipynb  front.py  gopro_scrapper.py  iphone_scrapper.py  test_scrapper.py
(+11 files in other folders)
